2013-10-11  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/mi_catch_ex.exp: Adjusts all "catch ..." tests to
	use the appropriate GDB/MI command instead, and verify
	the test output.

2013-10-11  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/source-nofile.gdb: New file.
	* gdb.base/source.exp: Add two tests verifying the behavior when
	the "source" command is given a non-existant filename.

2013-10-11  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-catch-load.c: Remove the include of "dlfcn.h".
	 [__WIN32__]: Include "windows.h" and define macro 'dlopen'
	 and 'dlclose'.
	[!__WIN32__]: Include "dlfcn.h".
	* gdb.mi/mi-catch-load.exp: Set up kfail.

2013-10-10  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* lib/gdb.exp (gdb_core_cmd): Replace fixed string "re-load
	generated corefile" by argument "$test".

2013-10-09  Pedro Alves  <palves@redhat.com>

	* gdb.python/py-prettyprint.exp (run_lang_tests): Adjust expected
	output.

2013-10-09  Pedro Alves  <palves@redhat.com>

	* gdb.base/catch-syscall.exp (test_catch_syscall_without_args)
	(test_catch_syscall_with_args, test_catch_syscall_with_many_args)
	(test_catch_syscall_with_wrong_args)
	(test_catch_syscall_restarting_inferior)
	(test_catch_syscall_fail_nodatadir)
	(test_catch_syscall_without_args_noxml)
	(test_catch_syscall_with_args_noxml)
	(test_catch_syscall_with_wrong_args_noxml): Use with_test_prefix.

2013-10-08  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/dwzbuildid.exp: New file.
	* lib/dwarf.exp (Dwarf::_section): Add "flags" and "type"
	parameters.
	(Dwarf::_defer_output): Change "section" parameter to
	"section_spec"; update.
	(Dwarf::gnu_debugaltlink, Dwarf::_note, Dwarf::build_id): New
	procs.

2013-10-08  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/mi_catch_ex.exp: Make "mi_execute_to" test names unique.

2013-10-07  Tom Tromey  <tromey@redhat.com>

	* lib/mi-support.exp (varobj_tree::walk_tree): Set _root_idx
	to 0.

2013-10-06  Sergio Durigan Junior  <sergiodj@redhat.com>
